some change color

--- a/assets/sass/components/_explore.scss
+++ b/assets/sass/components/_explore.scss
@@ -71,6 +71,7 @@
 #color-1 {
     background-color: #FF6F00;
     writing-mode: vertical-lr;
+    color: white;
 
 }
 
@@ -78,35 +79,41 @@
     background-color: #FF8374;
     writing-mode: top to bottom;
     writing-mode: vertical-lr;
+    color: white;
 }
 
 #color-3 {
     background-color: #B45A1B;
     writing-mode: vertical-lr;
+    color: white;
 }
 
 #color-4 {
     background-color: #FFB300;
     writing-mode: vertical-lr;
+    color: white;
 
 }
 
 #color-5 {
     background-color: #00A8FF;
     writing-mode: vertical-lr;
+    color: white;
 }
 
 #color-6 {
     background-color: blue;
     writing-mode: vertical-lr;
+    color: white;
 }
 
 #color-7 {
     background-color: #6DB4A7;
-    writing-mode: vertical-lr;
+    writing-mode: vertical-lr; color: white;
 }
 
 #color-8 {
     background-color: #8db46d;
     writing-mode: vertical-lr;
+    color: white;
 }
