--- a/assets/sass/components/_explore.scss
+++ b/assets/sass/components/_explore.scss
@@ -67,6 +67,21 @@
         }
     }
 
+    @media (max-width:992px) {
+        .hover-btn-1 {
+            display: none;
+        }
+
+        .hover-btn {
+            background-color: transparent;
+            transform: rotate(0deg);
+        }
+
+        .card {
+            display: block;
+        }
+    }
+
     @media (max-width:1210px) {
         .hover-btn {
             width: 85px;
@@ -79,13 +94,14 @@
         .hover-btn-3 {
             width: 50px;
         }
+
         .card {
             width: 400px;
         }
 
     }
 
-     @media (max-width:1010px) {
+    @media (max-width:1010px) {
         .hover-btn {
             width: 77px;
         }
@@ -99,7 +115,12 @@
         }
     }
 
-    @mea
+    @media (max-width:768px) {
+        .card {
+        }
+
+    }
+
 }
 
 .border-c1 {
